reports/l21/artifacts/wave10_wp1_app_tests_check.txt
    Checking app v0.1.0 (/Users/bob/Desktop/Projects/ING/sing/singbox-rust/app)
warning: unused import: `std::sync::Arc`
  --> app/tests/protocol_chain_e2e.rs:15:5
   |
15 | use std::sync::Arc;
   |     ^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: function `is_constrained_dial_error_str` is never used
  --> app/tests/protocol_chain_e2e.rs:21:4
   |
21 | fn is_constrained_dial_error_str(s: &str) -> bool {
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

error[E0432]: unresolved import `sb_adapters::outbound::selector::SelectorOutbound`
   --> app/tests/selector_udp_test.rs:153:9
    |
153 |     use sb_adapters::outbound::selector::SelectorOutbound;
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `SelectorOutbound` in `outbound::selector`

error[E0432]: unresolved import `sb_adapters::outbound::urltest::UrlTestOutbound`
   --> app/tests/selector_udp_test.rs:213:9
    |
213 |     use sb_adapters::outbound::urltest::UrlTestOutbound;
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---------------
    |         |                               |
    |         |                               help: a similar name exists in the module: `UrlTestOptions`
    |         no `UrlTestOutbound` in `outbound::urltest`

warning: `app` (test "protocol_chain_e2e") generated 2 warnings (run `cargo fix --test "protocol_chain_e2e" -p app` to apply 1 suggestion)
error[E0282]: type annotations needed
   --> app/tests/selector_udp_test.rs:185:19
    |
185 |       let session = outbound
    |  ___________________^
186 | |         .open_session()
187 | |         .await
    | |______________^ cannot infer type

error[E0282]: type annotations needed
   --> app/tests/selector_udp_test.rs:189:21
    |
189 |     let (data, _) = session.recv_from().await.expect("failed to recv");
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type

error[E0282]: type annotations needed
   --> app/tests/selector_udp_test.rs:199:19
    |
199 |       let session = outbound
    |  ___________________^
200 | |         .open_session()
201 | |         .await
    | |______________^ cannot infer type

error[E0282]: type annotations needed
   --> app/tests/selector_udp_test.rs:203:21
    |
203 |     let (data, _) = session.recv_from().await.expect("failed to recv");
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type

error[E0282]: type annotations needed
   --> app/tests/selector_udp_test.rs:253:19
    |
253 |       let session = outbound
    |  ___________________^
254 | |         .open_session()
255 | |         .await
    | |______________^ cannot infer type

error[E0282]: type annotations needed
   --> app/tests/selector_udp_test.rs:257:21
    |
257 |     let (data, _) = session.recv_from().await.expect("failed to recv");
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type

Some errors have detailed explanations: E0282, E0432.
For more information about an error, try `rustc --explain E0282`.
error: could not compile `app` (test "selector_udp_test") due to 8 previous errors
warning: build failed, waiting for other jobs to finish...
warning: function `supported_kinds` is never used
  --> app/src/analyze/registry.rs:63:8
   |
63 | pub fn supported_kinds() -> Vec<&'static str> {
   |        ^^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: function `supported_async_kinds` is never used
  --> app/src/analyze/registry.rs:98:8
   |
98 | pub fn supported_async_kinds() -> Vec<&'static str> {
   |        ^^^^^^^^^^^^^^^^^^^^^

warning: `app` (bin "app" test) generated 2 warnings
